--- a/pages/index.css
+++ b/pages/index.css
@@ -48,8 +48,45 @@
 
 
 .home .home-menu .myLetter{
-    grid-column: 2/3;
+    grid-column: 1/3;
     grid-row: 2/3;
     background: #ff912f;
 }
 
+.home .modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    /* display: none; */
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.home .modal-body{
+    display: flex;
+    flex-flow: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: white;
+    width: 70vw;
+    height: 70vw;
+    border-radius: 10px;
+}
+
+.home .modal-body input {
+    width: 80%;
+    height: 20px;
+    border: none;
+    border-bottom: 2px solid black;
+}
+
+.home .modal-body button {
+    width: 80%;
+    height: 5vh;
+    background-color: greenyellow;
+    border: none;
+}
