--- a/components/letter_templates/pink.css
+++ b/components/letter_templates/pink.css
@@ -1,6 +1,8 @@
 .pink { 
     padding: 20px 20px 0px 20px; 
     height: 100%;
+    max-width: 500px;
+    margin: auto;
 } 
 
 .pink > * {
@@ -27,43 +29,72 @@
     flex-flow: column;
     align-items: center;
 }
-.pink .buttons button {
+.pink .buttons button{
     width: 10vw;
     height: 10vw;
+    max-width: 50px;
+    max-height: 50px;
     border-radius: 25vw;
     background-color: rgb(186, 164, 127);
+    background-position: center;
+    background-size: 70% 70%;
+    background-repeat: no-repeat;
 }
+.pink .buttons > div:nth-of-type(1) > button { 
+    background-image: url('https://image.flaticon.com/icons/svg/149/149300.svg');
+}
+.pink .buttons > div:nth-of-type(2) > button { 
+    background-image: url('https://image.flaticon.com/icons/svg/1077/1077976.svg');
+}
+.pink .buttons > div:nth-of-type(3) > button { 
+    background-image: url('https://image.flaticon.com/icons/svg/1380/1380338.svg');
+}
+
+
 
 .pink .ad {
     width: 100%;
     height: 60px;
-
+    max-width: 300px;
     background-image: url('/static/img/banner.jpg');
     background-position: center;
     background-size: contain;
 }
-
-.pink .bride-broom > div {
-    text-align: center;
-}
-.pink .bride-broom img, .pink .map img{ 
+.pink .bride-broom > div > h1 { margin-bottom: 10px;}
+.pink .bride-broom > div { text-align: center; }
+.pink .bride-broom img, .pink .map img, .pink .invitation img{ 
     width: 70vw;
     height: 70vw;
+    max-width: 300px;
+    max-height: 300px;
 }
-
+.pink .bride-broom > div:nth-of-type(2) > h4 {
+    padding: 5px 20px;
+    background-color: rgb(186, 164, 127);
+    color: white;
+}
 .pink .invitation, .pink .map { 
     justify-content: center;
     padding: 20px;
     height: calc(100% - 84px);
 }
 .pink .invitation h2 { margin-top: 40px; }
-.pink .invitation img{ 
-    width: 60vw;
-    height: 60vw;
+
+.pink .invitation h2:nth-of-type(1) {
+    background-color: rgb(186, 164, 127);
+    color: white;
+    padding: 5px 20px;
 }
+.pink .invitation h2:nth-of-type(2) { color: rgb(186, 164, 127)} 
+
 
 .pink .map {
     justify-content: space-evenly;
+}
+.pink .map h2 {
+    background-color: rgb(186, 164, 127);
+    color: white;
+    padding: 5px 20px;
 }
 .pink .map .howto {
     display: flex;
@@ -74,5 +105,5 @@
     display: flex;
     flex-flow: column;
     align-items: center;
-    width: 50%;
+    width: 45%;
 }
