--- a/components/newletter/check.css
+++ b/components/newletter/check.css
@@ -3,7 +3,7 @@
     flex-flow: column;
     align-items: center;
     padding-bottom: 20px;
-    
+    max-width: 500px;
     /* width: 100%; */
 }
 .check .pink{
